<resources>
    <string name="app_name">Another Day</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="email">Email</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="separator_or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_dialog_desc">Please enter the email you would like to continue with.</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">cancel</string>
    <string name="send">send</string>
    <string name="my_projects">My Projects</string>
    <string name="my_projects_desc">Navigation link to my projects</string>
    <string name="more">Show more</string>
    <string name="more_desc">Show more</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_tasks_desc">Navigation link to my tasks</string>
    <string name="my_lists">My Lists</string>
    <string name="my_lists_desc">Navigation link to my lists</string>
    <string name="name_placeholder">Another Day User</string>
    <string name="email_placeholder">user@anotherday.se</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world</string>
</resources>