<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/another_day"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnGoogleSignIn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingVertical="10dp"
        android:text="@string/sign_in_with_google"
        app:backgroundTint="@color/another_day_background_color"
        app:icon="@drawable/ic_google_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        app:strokeColor="@color/soft_white"
        app:strokeWidth="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@+id/emailSignInContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn">

        <TextView
            android:id="@+id/loginSeparatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/separator_or"
            android:textColor="@color/soft_white"
            android:shadowRadius="2"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowColor="@color/soft_black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/loginSeparatorText"
            android:background="@color/soft_white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/loginSeparatorText"
            android:background="@color/soft_white"
            />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailSignInContainer"
        android:layout_width="339dp"
        android:layout_height="262dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email_label"
            app:startIconDrawable="@drawable/ic_email_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/soft_black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password_label"
            app:startIconDrawable="@drawable/ic_secure_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInEmailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/soft_black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEmailSignIn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:paddingVertical="10dp"
            android:text="@string/sign_in_with_email"
            app:backgroundTint="@color/another_day_secondary_color"
            app:icon="@drawable/ic_email_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/soft_white"
            app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>